# Zol

./: .gitignore  Cargo.toml  GUIDE.md  notes.md  rules.md  theme.rhai
crates/api/: Cargo.toml
crates/editor/: Cargo.toml
crates/gui/: Cargo.toml
crates/gui/src/: app_iced.rs  mod.rs
crates/gui/src/iced_editor/: mod.rs
crates/gui/src/iced_editor/inner/: data.rs  edit_doc.rs  mod.rs  mode.rs  tests.rs
crates/gui/src/iced_editor/nav/: cursor_x.rs  mod.rs  move_vertical.rs  raw_at_x.rs  tests.rs
crates/gui/src/iced_editor/scroll/: ensure_visible.rs  layout_y.rs  mod.rs  tests.rs
crates/gui/src/iced_editor/widget/: draw.rs  editor.rs  input.rs  mod.rs  widget.rs
crates/gui/src/iced_editor/widget/draw/: cursor.rs  mod.rs
crates/gui/src/iced_editor/widget/input/: keyboard.rs  mouse.rs
crates/zoll/: Cargo.toml
crates/zoll/benches/: edit.rs  helpers.rs  line_lookup.rs  parse.rs
crates/zoll/src/: lib.rs  viewport.rs
crates/zoll/src/ast/: doc.rs  line.rs  markers.rs  mod.rs  node.rs  span.rs  style.rs
crates/zoll/src/incremental/: doc.rs  mod.rs
crates/zoll/src/parser/: line.rs  marker_text.rs  merge.rs  mod.rs  parse.rs  tests.rs
crates/zoll/src/token/: find_deep_close.rs  helpers.rs  mod.rs  push_text.rs  tests.rs  tokenize.rs  types.rs
docs/: philosophy.md
docs/en/: README.md  architecture.md  markup-syntax.md  philosophy.md  rdb-format.md  theme-system.md
docs/ru/: README.md  architecture.md  markup-syntax.md  philosophy.md  rdb-format.md  theme-system.md
src/: document.rs  gui.rs  main.rs
src/api/: cursor.rs  editor.rs  mod.rs  text.rs
src/app/: mod.rs
src/editor/: cursor.rs  editor_widget.rs  font_manager.rs  input.rs  layout.rs  layouter.rs  line_utils.rs  markup.rs  mod.rs  navigation.rs  render.rs  renderer.rs  state.rs  theme.rs  utils.rs  widget.rs
src/gui/: app.rs  app_iced.rs  editor.rs  iced_editor.rs  mod.rs  render.css  run.rs
src/mdplus/: ast.rs  marker.rs  mod.rs  parser.rs  segmenter.rs  token.rs
src/theme/: convert.rs  editor.rs  load.rs  mod.rs  text.rs
src/webkit/: editor.rs  mod.rs  render.css
src/zml/: ast.rs  mod.rs  parser.rs  segmenter.rs  token.rs
src/zoll/: ast.rs  (+4 more)
(+156 files in other folders)
