[package]
name = "Flint"
version = "0.2.2"
edition = "2024"

[dependencies]
rhai = "1.25.1"
#notify = "8.2.0"
eframe = "0.35.0"
iced = { version = "0.14.0", features = ["advanced"] }
cosmic-text = "0.19"
unicode-segmentation = "1.13.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
