[package]
name = "Zol"
version = "0.3.0"
edition = "2024"

[dependencies]
rhai = "1.25.1"
#notify = "8.2.0"
iced = { version = "0.14.0", features = ["advanced", "image"] }
cosmic-text = "0.19"
unicode-segmentation = "1.13.3"
iced_futures = { version = "0.14.0", features = ["tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
