
[package]
name = "Zol"
version = "0.3.5"
edition = "2024"

[dependencies]
rhai = "1.25.1"
iced = { version = "0.14.0", features = ["advanced", "image"] }
cosmic-text = "0.19"
unicode-segmentation = "1.13.3"
iced_futures = { version = "0.14.0", features = ["tokio"] }
ron = "0.12.2"
serde = { version = "1.0.229", features = ["derive"] }
directories = "6.0.0"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
